--- a/sled_single_objects/templates/sled_single_objects/so_make_public.html
+++ b/sled_single_objects/templates/sled_single_objects/so_make_public.html
@@ -1,5 +1,6 @@
 {% extends "modal_base.html" %}
 {% load project_tags %}
+{% load static %}
 
 {% block title %}
 Make {% singular_or_plural form.obj_type.value items|length %} public?
