--- a/templates/simple_message.html
+++ b/templates/simple_message.html
@@ -1,6 +1,8 @@
 {% extends 'master_header.html' %}
 {% block content %}
-<div class=" jb-container message">
-  {{ message }}
+<div class="jb-container">
+  <div class="jb-simple-message">
+    {{ message }}
+  </div>
 </div>
 {% endblock content %}
