--- a/lenses/templates/lenses/lens_delete.html
+++ b/lenses/templates/lenses/lens_delete.html
@@ -1,5 +1,6 @@
 {% extends "modal_base.html" %}
 {% load project_tags %}
+{% load static %}
 
 {% block title %}
 Delete {% singular_or_plural 'Lenses' lenses|length %}?
