--- a/lenses/templates/lenses/lens_make_public.html
+++ b/lenses/templates/lenses/lens_make_public.html
@@ -1,5 +1,6 @@
 {% extends "modal_base.html" %}
 {% load project_tags %}
+{% load static %}
 
 {% block title %}
 Make {% singular_or_plural 'Lenses' lenses|length %} public?
