--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -2,79 +2,105 @@
 <!DOCTYPE html>
 
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <title>Strong Gravitational Lens database</title>
-  <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
-
-  <!-- The line below is required to style the message -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/global.css' %}" /> -->
-  <link href="{% static 'css/jb_style.css' %}" rel="stylesheet" />
-  <link href="{% static 'css/sled-global.css' %}" rel="stylesheet" />
-  {% block extrastyles %}
-  {% endblock extrastyles %}
-
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous" type="text/javascript"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/pkl4bli.js" type="text/javascript"></script>
-  <script type="text/javascript">
-    WebFont.load({
-      google: {
-        families: ["Basic:regular"]
-      }
-    });
-    try {
-      Typekit.load();
-    } catch (e) {}
-  </script>
-  {% block extrascripts %}
-  {% endblock extrascripts %}
-</head>
-
-
-<body>
-  <div class="persistent_message_container">
-    {% if current_messages %}
-    {% for message in current_messages %}
-    <div style="border-radius:0;" class="alert alert-icon alert-{{ message.tag }} mb-0" role="alert">
-      {{ message.message|safe }}
+  
+  <head>
+    <meta charset="UTF-8">
+    <title>Strong Gravitational Lens database</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
+    
+    <!-- The line below is required to style the message -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/global.css' %}" /> -->
+    <link href="{% static 'css/jb_style.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/sled-global.css' %}" rel="stylesheet" />
+    {% block extrastyles %}
+    {% endblock extrastyles %}
+    
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+    <script src="https://use.typekit.net/pkl4bli.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      WebFont.load({
+	  google: {
+              families: ["Basic:regular"]
+	  }
+      });
+      try {
+	  Typekit.load();
+      } catch (e) {}
+      
+      $("#alert-message").fadeTo(2000, 500).slideUp(500, function() {
+	  $("#alert-message").slideUp(500);
+      });
+    </script>
+    {% block extrascripts %}
+    {% endblock extrascripts %}
+  </head>
+  
+  
+  <body>
+    <div class="persistent-message-container">
+      {% if current_messages %}
+      {% for message in current_messages %}
+      <div style="border-radius:0;" class="alert alert-icon alert-{{ message.tag }} mb-0" role="alert">
+	{{ message.message|safe }}
+      </div>
+      {% endfor %}
+      {% endif %}
     </div>
-    {% endfor %}
-    {% endif %}
-  </div>
 
-
-  {% include "message_container.html" with messages=messages %}
-
-
-  <!-- Top navigation bar -->
-  <div class="jb-navbar-container">
-    <a href="{% url 'home:homepage' %}" class="jb-nav-brand"><img src="{% static 'images/JB_Master Header_Logo.png' %}" loading="lazy" width="248" alt=""></a>
-    <div class="jb-navbar">
-      <nav role="navigation">
-        <a href="{% url 'home:homepage' %}">Home</a>
-        <a href="{% url 'lenses:lens-index' %}">Lenses</a>
-        <a href="{% url 'sled_groups:group-list' %}">Groups</a>
-        <a href="{% url 'sled_collections:collections-list' %}">Collections</a>
-        <a href="{% url 'sled_papers:paper-query' %}">Papers</a>
-        {% if user.is_authenticated %}
-        <a href="{% url 'sled_users:user-profile' %}">{{ user.username }}</a>
-	{% if user.is_staff %}
-        <a href="{% url 'sled_users:user-admin' %}">Admin</a>
-	{% endif %}	
-        <a href="{% url 'logout'%}" class="jb-navbar-login"><span class="text-span">Logout</span></a>
-        {% else %}
-        <a href="{% url 'login'%}" class="jb-navbar-login"><span class="text-span">Login</span></a>
-        {% endif %}
-      </nav>
+    
+    <div class="alert-message-container">
+      {% if messages %}
+      {% for message in messages %}
+      {% if message.tags %}
+      <div style="border-radius:0;" id="alert-message" class="alert alert-icon alert-{{ message.tags }} alert-dismissible fade show mb-0" role="alert">
+	{{ message|safe }}
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+	  <span aria-hidden="true">&times;</span>
+	</button>
+      </div>
+      {% else %}
+      <div style="border-radius:0;">
+	{{ message }}
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+	  <span aria-hidden="true">&times;</span>
+	</button>
+      </div>
+      {% endif %}
+      {% endfor %}
+      {% endif %}
     </div>
-  </div>
 
-  {% block content %}
-  {% endblock %}
+    
+    <!-- Top navigation bar -->
+    <div class="jb-navbar-container">
+      <a href="{% url 'home:homepage' %}" class="jb-nav-brand"><img src="{% static 'images/JB_Master Header_Logo.png' %}" loading="lazy" width="248" alt=""></a>
+      <div class="jb-navbar">
+	<nav role="navigation">
+          <a href="{% url 'home:homepage' %}">Home</a>
+          <a href="{% url 'lenses:lens-index' %}">Lenses</a>
+          <a href="{% url 'sled_groups:group-list' %}">Groups</a>
+          <a href="{% url 'sled_collections:collections-list' %}">Collections</a>
+          <a href="{% url 'sled_papers:paper-query' %}">Papers</a>
+          {% if user.is_authenticated %}
+          <a href="{% url 'sled_users:user-profile' %}">{{ user.username }}</a>
+	  {% if user.is_staff %}
+          <a href="{% url 'sled_users:user-admin' %}">Admin</a>
+	  {% endif %}	
+          <a href="{% url 'logout'%}" class="jb-navbar-login"><span class="text-span">Logout</span></a>
+          {% else %}
+          <a href="{% url 'login'%}" class="jb-navbar-login"><span class="text-span">Login</span></a>
+          {% endif %}
+	</nav>
+      </div>
+    </div>
 
-</body>
+    
+    {% block content %}
+    {% endblock %}
+
+    
+  </body>
 
 </html>
