Finalized email templates.

--- a/templates/emails/unsuccessful_registration.html
+++ b/templates/emails/unsuccessful_registration.html
@@ -5,7 +5,4 @@ Here is the response from the administrators:
 <br>
 {{ response }}
 <br>
-Kind regards,
-<br>
-the SLED administration team
-<br>
+{% include "emails/signature.html" %}
