Major bug fix in modal forms: the model validators have to be run manually.

--- a/lenses/templates/lenses/lens_add_update_modal.html
+++ b/lenses/templates/lenses/lens_add_update_modal.html
@@ -21,7 +21,10 @@ Update Lens {{ lens.name }}
 
   
   <div class="jb-table-no-lines">
+    {{ form.owner }}
+    {{ form.access_level }}
 
+    
     <table class="jb-add-lens">
       <tr>
         <!-- First column -->
