--- a/templates/emails/password_reset.html
+++ b/templates/emails/password_reset.html
@@ -3,7 +3,7 @@ Dear {{ first_name }},
 we received a request to reset the password for your SLED account for this email address.
 To initiate the password reset process click the link below:
 <br>
-{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+<a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}">{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}</a>
 <br>
 This link can only be used once.
 If you did not make this request, you can simply ignore this email.
