--- a/templates/emails/successful_registration.html
+++ b/templates/emails/successful_registration.html
@@ -1,7 +1,7 @@
 Dear {{ first_name }},
 <br>
 your registration to the Strong LEns Database (SLED) website and API was successful.
-You can access your user profile here: <a href="{{ user_url }}">{{ username }}</a>
+You can access your user profile here: <a href="{{ protocol }}://{{ domain }}{{ user_url }}">{{ username }}</a>
 We hope this resource will facilitate your research work.
 <br>
 {% include "emails/signature.html" %}
