--- a/home/templates/home/home_index.html
+++ b/home/templates/home/home_index.html
@@ -17,7 +17,7 @@
 	    <div class="jb-activity">
 	      {% include "home/activity_home.html" with stream=stream max_entries=10 %}
 	      {% if stream|length > 10 %}
-	      <a href="{% url 'home:homepage-all-activity'%}">Display all activity</a>
+	      <a href="{% url 'home:activity-home-detailed'%}">Display all activity</a>
 	      {% endif %}
 	    </div>
 	    
