--- a/sled_collections/templates/sled_collections/collection_detail.html
+++ b/sled_collections/templates/sled_collections/collection_detail.html
@@ -17,10 +17,10 @@
   <!-- Recent activity div -->
   <div class="jb-activity">
     {% activity_stream 'target' collection %}
-    {% include "activity_summary.html" with stream=stream max_entries=5 %}
+    {% include "activity_object.html" with stream=stream max_entries=5 %}
     {% if stream|length > 5 %}
     <a href="#myModal" data-toggle="modal" data-target="#myModal">Display all activity</a>
-    {% include "activity_all_modal.html" with stream=stream %}
+    {% include "activity_object_modal.html" with stream=stream %}
     {% endif %}
   </div>
 
