--- a/sled_collections/templates/sled_collections/collection_remove_items.html
+++ b/sled_collections/templates/sled_collections/collection_remove_items.html
@@ -30,7 +30,7 @@ Remove items from collection {{ collection.name }}?
 
 {% block action_button %}
 <button type=" submit" class="jb-submit-button-1">
-    <img src="{% static 'icons/minus.svg' %}" >
+    <img src="{% static 'icons/dash.svg' %}" >
     Remove
 </button>
 {% endblock action_button %}
