--- a/templates/activity_object.html
+++ b/templates/activity_object.html
@@ -4,7 +4,7 @@
 {% if stream %}
 
 
-<table class="jb-activity">
+<table>
   <tbody>
 
     {% with activityCount=max_entries|stringformat:"s" %}
@@ -12,16 +12,18 @@
     
     {% for action in stream|slice:activitySlice %}
     {% with N=action.action_object.myitems.all|length %}
+
+    {% if action.verb != "started following" and action.verb != "stopped following" %}
     <tr>
       <td>
 	{% if action.data.level == "info" %}
-	<img src="{% static 'icons/info-circle-fill.svg' %}" class="filter-info2">
+	<img src="{% static 'icons/info-circle-fill.svg' %}" class="filter-info2 jb-alert-icon">
 	{% elif action.data.level == "success" %}
-	<img src="{% static 'icons/check-circle-fill.svg' %}" class="filter-success2">
+	<img src="{% static 'icons/check-circle-fill.svg' %}" class="filter-success2 jb-alert-icon">
 	{% elif action.data.level == "error" %}
-	<img src="{% static 'icons/x-circle-fill.svg' %}" class="filter-error2">
+	<img src="{% static 'icons/x-circle-fill.svg' %}" class="filter-error2 jb-alert-icon">
 	{% elif action.data.level == "warning" %}
-	<img src="{% static 'icons/exclamation-triangle-fill.svg' %}" class="filter-warning2">
+	<img src="{% static 'icons/exclamation-triangle-fill.svg' %}" class="filter-warning2 jb-alert-icon">
 	{% else %}
 	{{ action.data.level }}
 	{% endif %}
@@ -57,6 +59,16 @@
 
 	{% elif action.verb == "ImageChangeLog" %}
 	Image changed
+
+
+	{% elif action.verb == "started following" %}
+	{{ action.actor.id|get_user_link|safe }} started following 
+
+
+	{% elif action.verb == "stopped following" %}
+	{{ action.actor.id|get_user_link|safe }} stopped following 
+
+
 	
 
 
@@ -148,6 +160,7 @@
         {{ action.timestamp|timesince }} ago
       </td>
     </tr>
+    {% endif %}
     {% endwith %}
     {% endfor %}
     {% endwith %}
